feat!: Java 21 virtual threads by default for async/events executors (#150)
- jbst.async.virtual-threads / jbst.events.virtual-threads — new mandatory property (servers: true); SimpleAsyncTaskExecutor on virtual threads, ThreadPoolTaskExecutor retained when false
- threads-*-pool-percentage now optional, asserted only on the platform-pool path
- JbstWorker + JbstLatencySynchronizedQueue: synchronized → ReentrantLock (pinning avoidance)
- SequencedCollection getFirst() (JEP 431) in JbstCollectors, JbstEnvUtils, JbstSpringBoot
- Generational ZGC flags in docker-compose JVM_ARGUMENTS for testing purposes